# moss

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  cliff.toml  install.sh
.github/workflows/: ci.yml  release.yml
crates/moss-core/: Cargo.toml
crates/moss-core/src/: filter.rs  lib.rs  model.rs  platform.rs  resolver.rs
crates/moss-sys/: Cargo.toml  build.rs  wrapper.h
crates/moss-sys/src/: lib.rs
src/: main.rs  output.rs
