[workspace]
members = [".", "crates/moss-core", "crates/moss-sys"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "moss"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.2"
moss-core = { path = "crates/moss-core" }
serde_json = "1.0"

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
